bad/assign_binop_and_bool.example_compiler_output
ERROR
[1mbad/assign_binop_and_bool.lat:6:9: [1;31merror: [0;1mleft side is not assignable[m
	x && y = true;
	       [1;32m^[m
[1mbad/assign_binop_and_bool.lat:6:2: [1;34mnote: [0;1mleft side starts here[m
	x && y = true;
	[1;32m^[m
